src/scss/components/_cart.scss
$padding-horizontal: 1em;
$cart-margin: .5em;

.cart {
  position: fixed;
  bottom: 1.7em;
  left: 1.7em;
  min-height: 2.66em;
  border-radius: 1.33em;
  background: {
    color: $cl-primary;
    image: svg-uri('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#{$cl-white}" d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/></svg>');
    size: 1.33em;
    repeat: no-repeat;
    position: $padding-horizontal .6em;
  };
  font-size: 1.8rem;
  color: $cl-white;
  line-height: 2.66em;
  box-shadow: 0 2rem 3.5rem 0 rgba($cl-black, .12);
  cursor: pointer;
}

.cart__label {
  display: inline-block;
  text-indent: $padding-horizontal * 2.75;
  padding-right: $padding-horizontal * 1.25;
  pointer-events: none;
  user-select: none;
}

.cart.is-expanded {
  .cart__content-holder {
    width: 20em;
    margin-top: 0;
  }

  .cart__amount {
    transform: translate(-1.2em, 1em);
  }
}

.cart__amount {
  position: absolute;
  top: -.285em;
  right: -.285em;
  width: 1.74em;
  height: 1.74em;
  border-radius: 50%;
  background: $cl-white;
  border: 0.14em solid $cl-primary;
  line-height: 1.5;
  text-align: center;
  font-weight: bold;
  font-size: 1.4rem;
  color: $cl-black;
  cursor: default;
  user-select: none;
  transition: {
    property: transform, opacity;
    duration: 400ms;
  }
}

.cart__content-holder {
  position: relative;
  display: flex;
  width: 5em;
  height: 0;
  margin: -$cart-margin $cart-margin $cart-margin;
  border-radius: 1.33em * .66;
  overflow: hidden;
  transition: {
    property: width, height, margin;
    duration: 400ms;
  };


}

.cart-content {
  width: 100%;
  background: $cl-white;
  overflow: hidden;
  cursor: default;

  &.has-scrollbar {
    overflow-y: auto;
    overflow-x: hidden;
  }
}

.cart-item {
  display: flex;
  align-items: center;
  margin: 0 $cart-margin;
  padding: $cart-margin;
  border-radius: 1.33em * .33;
  overflow: hidden;
  box-shadow: 0 .3em .6em -.1em rgba(50,50,93,.25), 0 -.15em .35em -.15em rgba(0,0,0,.3);

  &:first-child {
    margin-top: $cart-margin;
  }

  &:last-child {
    margin-bottom: $cart-margin;
  }

  > * {
    flex-shrink: 0;
  }

  + .cart-item {
    margin-top: $cart-margin;
  }

  &--placeholder {
    flex-direction: column;
    // background-color: lighten($cl-primary, 40%);
    box-shadow: none;
    columns: desaturate($cl-primary, 50%);
    white-space: nowrap;

    &::before {
      content: '';
      display: block;
      width: 2em;
      height: 2em;
      margin-bottom: .5em;
      background: {
        image: svg-uri('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#{$cl-body}" d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V7H4v3H1v2h3v3h2v-3h3v-2H6zm9 4c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>');
        size: contain;
      }
    }
  }
}

.cart-item__image {
  width: 2em;
  height: 2em;
  margin-right: 1ch;
  border-radius: 50%;
  background-size: cover;
}

.cart-item__title {
  font-size: 1em;
  line-height: 1;
  color: $cl-body;
}

.cart-item__remove {
  width: 1.5em;
  height: 1.5em;
  margin-left: auto;
  background: {
    image: svg-uri('<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#{$cl-body}" d="M7 11v2h10v-2H7zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>');
    size: 1.33em;
    repeat: no-repeat;
    position: 50%;
  };
  cursor: pointer;
}

